# scrape-and-serve

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEMO_MODE.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: RESULTS.md  run_benchmarks.py
demo_data/: generate_demo_data.py  inventory.xlsx  products.csv  scrape_config.yaml
docs/adr/: 0001-httpx-async-over-requests.md  0002-content-intelligence-pipeline.md  0003-data-quality-validation.md
scrape_and_serve/: __init__.py  content_intelligence.py  data_pipeline.py  data_quality.py  diff_visualizer.py  excel_converter.py  price_monitor.py  scheduler.py  scraper.py  seo_analyzer.py  seo_content.py  validator.py  validators.py
tests/: test_content_intelligence.py  test_data_pipeline.py  test_data_quality.py  test_diff_visualizer.py  test_excel_converter.py  test_price_monitor.py  test_scheduler.py  test_scraper.py  test_seo_analyzer.py  test_seo_content.py  test_validator.py  test_validators.py
