[project]
name = "scrape-and-serve"
version = "0.1.0"
description = "Web scraping framework + Excel-to-web converter"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
